# agent-spine

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  README.zh-CN.md  install.sh  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: test.yml
.npc/: config.toml
docs/: agent-spine-tech-share-speaker-notes.md  agent-spine-tech-share.html  cli.md  configuration.md  design.md  principles.md  usage.md
docs/optimization-proposals/: 2026-06-22.md  2026-07-02-npc-watch.md  2026-07-03-npc-handoff.md  2026-07-03.md  2026-07-05-orchestration-context-budget.md  2026-07-09-bun-migration-lessons.md
docs/reviews/: review-commit-6b0c961-20260718-071135.md
openspec/: config.yaml
plugins/agent-spine/: README.md
scripts/: check-doc-refs.sh  check_spec.py
src/agent_spine/: __init__.py
src/npc/: __init__.py  _io.py  agent.py  auto_decide.py  change.py  clean.py  cli.py  coder.py  config.py  deliver.py  doctor.py  events.py  fixer.py  focus.py  git_chain.py  git_ops.py  hosts.py  init_cmd.py  integrate.py  lessons.py  notify.py  paths.py  pipeline.py  plan.py  playbook.py  repair.py  resume.py  task.py  (+17 more)
tests/: conftest.py  test_agent.py  test_auto_decide_loss_cutting.py  test_blocking_category_agg.py  test_change_run.py  test_check_spec.py  test_clean.py  test_coder_run.py  test_coder_timeout_budget.py  test_config.py  test_cost.py  test_deliver.py  test_doctor.py  test_engines.py  test_events.py  test_ff_merge_teardown.py  test_fixer.py  test_focus.py  test_git_chain.py  test_git_ops.py  test_hosts.py  test_init_cmd.py  test_init_crash_recovery.py  test_integrate.py  test_lessons.py  test_notify.py  test_orchestrator_record_check.py  test_packaging.py  test_paths.py  test_pipeline.py  test_plan.py  test_plan_dag.py  test_playbook.py  test_reduce_review_fix_cost.py  test_resume.py  test_review.py  test_review_run_failure_branch.py  test_robust_orchestrator_json_parsing.py  test_schema.py  test_session.py  (+21 more)
(+221 files in other folders)
