[project]
name = "agent-spine"
version = "1.1.0"
description = "Agent skill 的确定性执行层：把脚本化的确定性逻辑下沉到 Python CLI（执行机械动作的 NPC，让 LLM 专注决策）"
requires-python = ">=3.11"
authors = [{ name = "alpha" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.scripts]
npc = "agent_spine.npc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_spine"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.uv]
managed = true
